exports[`test SignupForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create an account
    </h1>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email_address">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email_address"
          maxLength={undefined}
          name="email_address"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="email"
          value="" />
      </div>
      <div
        styleName="user-type">
        <div
          className="field">
          <fieldset>
            <legend>
              I want to
            </legend>
            <div>
              <span>
                <input
                  checked={false}
                  disabled={false}
                  id="user_type-buyer"
                  name="user_type"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  type="radio"
                  value="buyer" />
                <label
                  htmlFor="user_type-buyer">
                  Buy for government
                </label>
              </span>
              <span>
                <input
                  checked={false}
                  disabled={false}
                  id="user_type-seller"
                  name="user_type"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  type="radio"
                  value="seller" />
                <label
                  htmlFor="user_type-seller">
                  Sell ICT services
                </label>
              </span>
            </div>
          </fieldset>
        </div>
      </div>
      <input
        role="button"
        type="submit"
        value="Create your account" />
      <p>
        <small>
          All activity on the Digital Marketplace is subject to our 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;

exports[`test SignupForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create an account
    </h1>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email_address">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email_address"
          maxLength={undefined}
          name="email_address"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="email"
          value="" />
      </div>
      <div
        styleName="user-type">
        <div
          className="field">
          <fieldset>
            <legend>
              I want to
            </legend>
            <div>
              <span>
                <input
                  checked={false}
                  disabled={false}
                  id="user_type-buyer"
                  name="user_type"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  type="radio"
                  value="buyer" />
                <label
                  htmlFor="user_type-buyer">
                  Buy for government
                </label>
              </span>
              <span>
                <input
                  checked={false}
                  disabled={false}
                  id="user_type-seller"
                  name="user_type"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  type="radio"
                  value="seller" />
                <label
                  htmlFor="user_type-seller">
                  Sell ICT services
                </label>
              </span>
            </div>
          </fieldset>
        </div>
      </div>
      <input
        role="button"
        type="submit"
        value="Create your account" />
      <p>
        <small>
          All activity on the Digital Marketplace is subject to our 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;
